<resources>
    <string name="app_name">SimpleMusicPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next">下一曲</string>
    <string name="previous">上一曲</string>
    <string name="stop">停止</string>
    <string name="list">列表</string>
    <string name="title_activity_music_list">MusicListActivity</string>
    <string name="loadList">加载所有歌曲</string>
</resources>
