<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/Btn_Previous"
    android:text="@string/previous"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/Btn_Next"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Btn_Previous"
        android:layout_toEndOf="@+id/Btn_Previous" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/Btn_Play"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Btn_Next"
        android:layout_toEndOf="@+id/Btn_Next" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/Btn_Stop"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Btn_Play"
        android:layout_toEndOf="@+id/Btn_Play" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:id="@+id/Btn_List"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SongName - Singer"
        android:id="@+id/SongInfomation"
        android:layout_below="@+id/Btn_List"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Btn_List"
        android:layout_alignEnd="@+id/Btn_List"
        android:textColor="#ffa5bd85"
        android:autoText="false"
        android:gravity="center_vertical" />

</RelativeLayout>
